--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <figure class="avatar">
             <img class="img-avatar" src="./images/avatar.jpg" alt="avatar" />
           </figure>
-          <h2 class="name">Valery Cherevko</h2>
-          <h3>Frontend Developer</h3>
+          <h2 class="name">Черевко Валерий</h2>
+          <h3>Frontend Web Developer</h3>
           <nav class="contacts">
             <ul>
               <li><a href="https://github.com/v-cherevko">GitHub</a></li>
@@ -34,60 +34,57 @@
           <div class="skills">
             <h2 class="skills-title">Skills</h2>
             <ul>
-              <li>HTML5, CSS3, JS;</li>
-              <li>TypeScript;</li>
-              <li>Git, GitHub;</li>
-              <li>JIRA;</li>
-              <li>Nuxt.js, Vue.js, vuex, axios;</li>
-              <li>Angular 2;</li>
-              <li>SASS, LESS;</li>
+              <li>HTML5, CSS3, JavaScript;</li>
+              <li>Nuxt,js, Vue.js;</li>
+              <li>Vuex, Router, Axios;</li>
+              <li>SASS</li>
+              <li>Git, GitHub, GitLab, Bitbucket;</li>
+              <li>Jira, Bitrix;</li>
             </ul>
           </div>
         </section>
         <section class="right-column">
-          <h3 class="title">Brief information</h3>
+          <h3 class="title">Опыт работы</h3>
+          <div class="flex">
+            <span>Frontend Web Developer</span>
+            <span>03.2020 - 01.2021</span>
+          </div>
+          <div class="flex">
+            <span>WebDad</span>
+            <span>Брест</span>
+          </div>
           <em>
-            My goal is to develop as a qualified specialist in the field of web
-            development. I approach each task responsibly. I quickly absorb
-            information. Inclined to self-study. Worked according to the
-            methodology SCRUM. I have a great desire develop in this direction.
-            Most of all I like working with the front end, but I can also work
-            with the server side.
-          </em>
-          <h3 class="title">Code examples</h3>
-          <figure>
-            <img
-              class="img-examples"
-              src="./images/code-examples.png"
-              alt="examples"
-            />
-          </figure>
-          <h3 class="title">Experience</h3>
-          <em>
-            Completed an internship at WebDad. I managed to work on several
-            projects. I can show educational projects:
-          </em>
-          <nav>
-            <ul class="projects-list">
-              <li>
-                <a href="https://github.com/v-cherevko/TodoListVue">
-                  To do list written in Vue.js framework
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/v-cherevko/PersonListAngular2">
-                  List of people written in the Angular 2 framework
-                </a>
-              </li>
+            Достижения:
+            <ul>
+              <li>Верстка сайта и шаблонов;</li>
+              <li>Кроссбраузерная и адаптивная верстка;</li>
+              <li>Анимации;</li>
+              <li>Nuxt.js, Vue.js;</li>
+              <li>Соединение frontend части с beckend;</li>
+              <li>Понимание принципа построения backend части;</li>
+              <li>Пример комерческой разработки:</li>
+              <li><a href="https://sophienwald.ru/">https://sophienwald.ru/</a></li>
             </ul>
-          </nav>
-          <h3>Education</h3>
-          <ul class="list">
-            <li>Secondary school</li>
-            <li>Selfeducation</li>
-            <li>Internship at company WebDad</li>
-          </ul>
-          <h3>Languages</h3>
+          </em>
+          <div class="flex">
+            <span>Frontend Web Developer</span>
+            <span>06.2021 - настоящее время</span>
+          </div>
+          <div class="flex">
+            <span>MSA-IT - CRM development</span>
+            <span>Удалённо</span>
+          </div>
+          <em>
+            Достижения:
+            <ul>
+              <li>Vuex, router, axios;</li>
+              <li>Подключение метрик;</li>
+              <li>Построение проекта с нуля;</li>
+              <li>Поддержка и рефактор уже существующих проектов;</li>
+              <li>Все работы под NDA;</li>
+            </ul>
+          </em>
+          <h3 class="title">Languages</h3>
           <ul class="list">
             <li>English - elementary ( A1 );</li>
           </ul>
